--- a/css/index.css
+++ b/css/index.css
@@ -82,3 +82,30 @@
 .dm_banner .banner_index li.current{
     background-color:deeppink;
 }
+/*精选*/
+.content_selected{
+    width: 100%;
+    overflow: hidden;
+}
+.selected{
+ width: 45%;
+
+}
+.selected a img{
+    width: 100%;
+}
+.selected:nth-of-type(1){
+    margin-left: 14px;
+}
+.selected:nth-of-type(2){
+    margin-left: 16px;
+}
+.selected_title{
+    font-size: 20px;
+    margin-top: 24px;
+    margin-bottom: 13px;
+    margin-left: 14px;
+    font-family: monospace;
+}
+
+
