--- a/css/home.less
+++ b/css/home.less
@@ -52,39 +52,45 @@ ol ,ul{
 }
 /*顶部设置*/
 .dm_header{
-  height: 70/@rem;
+  height: 100/@rem;
   width:100%;
   background-color: rgba(202, 215, 226, 0.3);
   position: relative;
 }
 .dm_header .header_logo{
-  width: 60/@rem;
-  height: 36/@rem;
+  width: 80/@rem;
+  height: 56/@rem;
   position: absolute;
-  right: 105/@rem;
-  top: 12/@rem;
+  right: 0;
+  left: 430/@rem;
+  top:0;
+  bottom: 0;
+  margin: auto;
   background-image: url("../images/search.png");
-  background-size: 40/@rem 40/@rem;
+  background-size: 45/@rem 45/@rem;
   background-repeat: no-repeat;
 }
 .dm_header .header_logo2{
-  width: 60/@rem;
-  height: 36/@rem;
+  width: 80/@rem;
+  height: 56/@rem;
   position: absolute;
-  right: 20/@rem;
-  top: 12/@rem;
+  right: 0;
+  left: 650/@rem;
+  top:0;
+  bottom: 0;
+  margin: auto;
   background-image: url("../images/man.png");
   background-size: 40/@rem 40/@rem;
   background-repeat: no-repeat;
 }
 .dm_header .header_logo3{
-  width: 160/@rem;
-  height: 66/@rem;
+  width: 180/@rem;
+  height: 86/@rem;
   position: absolute;
-  left: 5/@rem;
-  top: 8/@rem;
+  left: 10/@rem;
+  top: 13/@rem;
   background-image: url("../images/LOO.png");
-  background-size: 150/@rem 60/@rem;
+  background-size: 180/@rem 80/@rem;
   background-repeat: no-repeat;
 }
 
