移动端页面基本=实现

--- a/css/content.css
+++ b/css/content.css
@@ -43,6 +43,7 @@
   left: 7.33866667rem;
   top: 0.72533333rem;
   font-weight: 600;
+  font-size: 0.59733333rem;
 }
 .IN_contanier .IN_head .hr1 {
   height: 1px;
