--- a/css/content.less
+++ b/css/content.less
@@ -42,6 +42,7 @@
         left: 344/@rem;
         top:34/@rem;
         font-weight: 600;
+        font-size: 28/@rem;
       }
       .hr1{
         height: 1px;
