--- a/css/register.less
+++ b/css/register.less
@@ -12,8 +12,10 @@
             position: absolute;
             right: 30/@rem;
             top: 30/@rem;
-            color:#55C1DD ;
-            font-size:29/@rem;
+                a{
+                  color:#55C1DD ;
+                  font-size:29/@rem;
+                }
           }
           .head_logo1 {
             width: 60/@rem;
@@ -30,6 +32,7 @@
             left: 344/@rem;
             top: 34/@rem;
             font-weight: 600;
+            font-size: 28/@rem;
           }
           .hr1 {
             height: 1px;
