--- a/css/content.css
+++ b/css/content.css
@@ -128,44 +128,55 @@
   background: #F3F5F8;
   position: fixed;
   bottom: 0;
+  display: flex;
+  text-align: center;
+  line-height: 2.13333333rem;
+  /*.hr3{
+          width: 100%;
+          height: 1px;
+          background: rgba(223,223,223,0.5);
+          position: absolute;
+          top:0;
+        }
+        .footer_span{
+          height: 100%;
+          width: 1px;
+          position: absolute;
+          left: 375/@rem;
+          background: rgba(223,223,223,0.5);
+        }
+        .footer_type_l{
+            position: absolute;
+            top: 35/@rem;
+            left: 115/@rem;
+              img{
+                  display: block;
+                  position: absolute;
+                  top: 2/@rem;
+                  left: 120/@rem;
+                  width: 30/@rem;
+              }
+        }
+        .footer_type_r{
+          position: absolute;
+          right: 100/@rem;
+          top:35/@rem;
+              img{
+                display: block;
+                position: absolute;
+                width: 30/@rem;
+                left: 120/@rem;
+                top:2/@rem;
+              }
+        }*/
 }
-.IN_contanier .IN_footer .hr3 {
-  width: 100%;
-  height: 1px;
-  background: rgba(223, 223, 223, 0.5);
-  position: absolute;
-  top: 0;
+.IN_contanier .IN_footer div {
+  flex: 1;
 }
-.IN_contanier .IN_footer .footer_span {
-  height: 100%;
-  width: 1px;
-  position: absolute;
-  left: 8rem;
-  background: rgba(223, 223, 223, 0.5);
-}
-.IN_contanier .IN_footer .footer_type_l {
-  position: absolute;
-  top: 0.74666667rem;
-  left: 2.45333333rem;
-}
-.IN_contanier .IN_footer .footer_type_l img {
-  display: block;
-  position: absolute;
-  top: 0.04266667rem;
-  left: 2.56rem;
+.IN_contanier .IN_footer div img {
+  margin-left: 0.192rem;
   width: 0.64rem;
-}
-.IN_contanier .IN_footer .footer_type_r {
-  position: absolute;
-  right: 2.13333333rem;
-  top: 0.74666667rem;
-}
-.IN_contanier .IN_footer .footer_type_r img {
-  display: block;
-  position: absolute;
-  width: 0.64rem;
-  left: 2.56rem;
-  top: 0.04266667rem;
+  padding-top: 0.21333333rem;
 }
 .IN_contanier .liubai {
   width: 100%;
