--- a/css/content.less
+++ b/css/content.less
@@ -128,7 +128,18 @@
       background: #F3F5F8;
       position: fixed;
       bottom: 0;
-        .hr3{
+      display: flex;
+      text-align: center;
+      line-height: 100/@rem;
+        div{
+          flex: 1;
+          img{
+            margin-left: 9/@rem;
+            width: 30/@rem;
+            padding-top: 10/@rem;
+          }
+        }
+        /*.hr3{
           width: 100%;
           height: 1px;
           background: rgba(223,223,223,0.5);
@@ -165,7 +176,7 @@
                 left: 120/@rem;
                 top:2/@rem;
               }
-        }
+        }*/
     }
   .liubai{
     width: 100%;
