--- a/css/detail.less
+++ b/css/detail.less
@@ -137,7 +137,7 @@
       margin-top: 40/@rem;
       margin-left: 37/@rem;
       width: 90%;
-      img {
+        img {
         width: 100%;
       }
       span {
@@ -167,22 +167,23 @@
     }
   }
   .footer {
-    width: 100%;
+    width: 90%;
     position: fixed;
     bottom: 0;
     background: #FFFFFF;
     text-align: center;
     height: 100/@rem;
+    border: 1px silver solid;
     line-height: 100/@rem;
-    .footer_border{
-      position: absolute;
-      top: 0;
-      height: 1px;
-      width: 90%;
-      margin-left: 35/@rem;
-      background: #A4A3A8;;
-    }
+    margin-left: 30/@rem;
+    border-radius: 10/@rem;
+    border-bottom: 0;
     display: flex;
+      .img_atm{
+        img{
+          margin-right: 40/@rem;
+        }
+      }
       .A{
         a{
           display: inline-block;
@@ -212,6 +213,6 @@
 
   }
   .nothing6 {
-    height: 80/@rem;
+    height: 105/@rem;
   }
 }
