--- a/css/content.less
+++ b/css/content.less
@@ -133,10 +133,15 @@
       line-height: 100/@rem;
         div{
           flex: 1;
+          position: relative;
+          span{
+            font-size: 28/@rem;
+          }
           img{
-            margin-left: 9/@rem;
+            position: absolute;
+            top:33/@rem;
+            left: 250/@rem;
             width: 30/@rem;
-            padding-top: 10/@rem;
           }
         }
         /*.hr3{
