--- a/css/detail.less
+++ b/css/detail.less
@@ -32,11 +32,21 @@
       right: 30/@rem;
       box-shadow: 0px 1px lightgrey;
       a {
+        display: block;
         line-height: 57px;
         padding-left: 3px;
         width: 100%;
+        position: relative;
         img {
+          display: inline-block;
+          position: absolute;
+          top: 0;
+          bottom: -85/@rem;
+          left: 0;
+          right: 0;
+          margin: auto;
           width: 60/@rem;
+
         }
       }
     }
