--- a/css/home.css
+++ b/css/home.css
@@ -259,6 +259,7 @@ ul {
 }
 .footer_wrap .footer div a {
   color: #55C1DD;
+  font-size: 0.59733333rem;
 }
 .footer_wrap .footer div a img {
   width: 0.85333333rem;
@@ -280,6 +281,7 @@ ul {
 }
 .footer_wrap .footer1 div a {
   color: #55C1DD;
+  font-size: 0.59733333rem;
 }
 .footer_wrap .footer1 div a img {
   width: 0.85333333rem;
