--- a/css/home.less
+++ b/css/home.less
@@ -264,6 +264,7 @@ ol ,ul{
       flex: 1;
       a{
         color: #55C1DD;
+        font-size: 28/@rem;
         img{
           width: 40/@rem;
           margin-right: 9/@rem;
@@ -285,6 +286,7 @@ ol ,ul{
          flex: 1;
          a{
            color: #55C1DD;
+           font-size: 28/@rem;
            img{
              width: 40/@rem;
              margin-right: 9/@rem;
