--- a/css/own.less
+++ b/css/own.less
@@ -23,6 +23,7 @@
             left: 344/@rem;
             top: 34/@rem;
             font-weight: 600;
+            font-size: 28/@rem;;
           }
           .hr1 {
             height: 1px;
