--- a/css/detail.css
+++ b/css/detail.css
@@ -35,11 +35,20 @@
   box-shadow: 0px 1px lightgrey;
 }
 .de_container .dm_banner .banner_collection a {
+  display: block;
   line-height: 57px;
   padding-left: 3px;
   width: 100%;
+  position: relative;
 }
 .de_container .dm_banner .banner_collection a img {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  bottom: -1.81333333rem;
+  left: 0;
+  right: 0;
+  margin: auto;
   width: 1.28rem;
 }
 .de_container .dm_banner .banner_title {
