--- a/css/category.less
+++ b/css/category.less
@@ -40,7 +40,54 @@
       background-image: url("../images/service.png");
       background-repeat: no-repeat;
       background-size: cover;
-
+    }
+  }
+  .main{
+    width: 100%;
+    background: #F3F5F8;
+    height: 1116/@rem; ;
+    .main_left{
+      width: 185/@rem;
+      ul{
+        width: 100%;
+        text-align: center;
+        line-height: 125/@rem;
+        .current{
+          background: #FFFFFF;
+          border-left: 2px solid #84C8DE;
+          a{
+            color: #84C8DE;
+          }
+        }
+        li{
+          height:125/@rem;
+          display: block;
+          width: 100%;
+          font-size: 28/@rem;
+          font-weight: 600;
+          a{
+            display: block;
+            color: #000000;
+          }
+        }
+      }
+    }
+    .main_right{
+      overflow: hidden;
+      background: #FFFFFF;
+      height: 1106/@rem;
+      width: 562/@rem;
+      ul{
+        li{
+          float: left;
+          margin-left: 20/@rem;
+          margin-top: 10/@rem;
+          img{
+            width: 240/@rem;
+            height: auto;
+          }
+        }
+      }
     }
   }
 }
