--- a/css/detail.css
+++ b/css/detail.css
@@ -3,46 +3,52 @@
   position: relative;
   /*评分顶部说明*/
 }
-.de_container .dm_banner {
-  width: 100%;
-  height: 16.21333333rem;
-  /*小图标调整*/
+.de_container .banner_title {
+  margin-top: 0.85333333rem;
+  font-size: 0.74666667rem;
+  margin-left: 0.704rem;
+  font-weight: 600;
 }
-.de_container .dm_banner .banner_right {
-  width: 1.38666667rem;
-  height: 1.38666667rem;
-  border-radius: 50%;
-  border-shadow: 0.02133333rem;
-  background: #FFFFFF;
+.de_container .banner_selled {
+  margin-top: 0.704rem;
+  margin-left: 0.64rem;
+  color: #A4A3A8;
+}
+.de_container .banner_price {
   position: absolute;
-  top: 0.64rem;
-  left: 0.64rem;
+  bottom: 0.64rem;
+  right: 0.64rem;
 }
-.de_container .dm_banner .banner_right a {
-  width: 100%;
+.de_container .banner_price span {
+  color: red;
+  font-size: 0.81066667rem;
 }
-.de_container .dm_banner .banner_right a img {
-  width: 100%;
+.de_container .banner_price i:nth-of-type(1) {
+  font-size: 0.36266667rem;
 }
-.de_container .dm_banner .banner_collection {
+.de_container .banner_price i:nth-of-type(2) {
+  font-size: 0.29866667rem;
+  color: #A4A3A8;
+}
+.de_container .banner_collection {
   width: 1.6rem;
   height: 1.6rem;
   border-radius: 50%;
   border-shadow: 0.02133333rem;
   background: #FFFFFF;
   position: absolute;
-  bottom: 5.12rem;
+  top: 9.38666667rem;
   right: 0.64rem;
   box-shadow: 0px 1px lightgrey;
 }
-.de_container .dm_banner .banner_collection a {
+.de_container .banner_collection a {
   display: block;
   line-height: 57px;
   padding-left: 3px;
   width: 100%;
   position: relative;
 }
-.de_container .dm_banner .banner_collection a img {
+.de_container .banner_collection a img {
   display: inline-block;
   position: absolute;
   top: 0;
@@ -52,16 +58,29 @@
   margin: auto;
   width: 1.28rem;
 }
-.de_container .dm_banner .banner_title {
-  margin-top: 0.85333333rem;
-  font-size: 0.74666667rem;
-  margin-left: 0.704rem;
-  font-weight: 600;
+.de_container .banner_right {
+  width: 1.38666667rem;
+  height: 1.38666667rem;
+  border-radius: 50%;
+  border-shadow: 0.02133333rem;
+  background: #FFFFFF;
+  position: absolute;
+  top: 0.64rem;
+  left: 0.64rem;
 }
-.de_container .dm_banner .banner_selled {
-  margin-top: 0.704rem;
-  margin-left: 0.64rem;
-  color: #A4A3A8;
+.de_container .banner_right a {
+  width: 100%;
+}
+.de_container .banner_right a img {
+  width: 100%;
+}
+.de_container .dm_banner {
+  width: 100%;
+  height: 10.66666667rem;
+  /*小图标调整*/
+}
+.de_container .dm_banner .banner_index_detail {
+  bottom: 0.85333333rem;
 }
 .de_container .dm_banner .de_banner_index {
   bottom: 5.76rem;
@@ -81,14 +100,6 @@
 .de_container .dm_banner .banner_price i:nth-of-type(2) {
   font-size: 0.29866667rem;
   color: #A4A3A8;
-}
-.de_container .dm_banner .hr4 {
-  position: absolute;
-  bottom: 0;
-  height: 1px;
-  width: 14.72rem;
-  margin-left: 0.64rem;
-  background: silver;
 }
 .de_container .tap {
   margin-top: 0.64rem;
