--- a/css/home.less
+++ b/css/home.less
@@ -95,30 +95,22 @@ ol ,ul{
 }
 
 /*lunbo*/
-.dm_banner{
+.dm_banner {
   width: 100%;
   overflow: hidden;
   /*索引定位*/
   position: relative;
-}
-.dm_banner{
-  .dm_banner_images{
+  .dm_banner_images {
     /*4倍宽度  横向 四张图片*/
     width: 600%;
     -webkit-transform: translateX(-16.667%);
     transform: translateX(-16.667%);
-  }
-  .dm_banner_images li{
-    float: left;
-    width: 16.667%;
-  }
-  .dm_banner_images li a{
-    display: block;
-    width: 100%;
-  }
-  .dm_banner_images {
-    li{
+    li {
+      float: left;
+      width: 16.6667%;
       a {
+        display: block;
+        width: 100%;
         img {
           display: block;
           width: 100%;
@@ -126,30 +118,25 @@ ol ,ul{
       }
     }
   }
-  .banner_index{
-    position: absolute;
-    bottom: 30/@rem;
-    left:50%;
-    margin-left: -20/@rem;
-  }
-  .banner_index{
-    li{
-      float: left;
-      width: 10/@rem;
-      height: 10/@rem;
-      border-radius: 50%;
-      border:  1px solid white;
-      margin-left: 5/@rem;
-    }
-  }
-  .banner_index{
-    li{
-      .current{
-        background-color:deeppink;
+    /*小图标*/
+    .banner_index {
+      position: absolute;
+      bottom: 30/@rem;
+      left: 50%;
+      margin-left: -20/@rem;
+      li {
+        float: left;
+        width: 10/@rem;
+        height: 10/@rem;
+        border-radius: 50%;
+        border: 1px solid white;
+        margin-left: 5/@rem;
+      }
+      .current {
+        background-color: deeppink
       }
     }
   }
-}
 /*精选*/
 .content_selected{
   width: 100%;
@@ -196,8 +183,8 @@ ol ,ul{
   width: 327/@rem;
 }
 .content_recommend .recommend_img_list li:nth-of-type(1){
-   margin-left: 30/@rem;
- }
+  margin-left: 30/@rem;
+}
 .content_recommend .recommend_img_list li:nth-of-type(n+2){
   margin-left: 24/@rem;
 }
@@ -206,11 +193,14 @@ ol ,ul{
   height: auto;
   width: 327/@rem;
 }
+
+
+
+
+
 /*精选*/
 .content_recommend2 .recommend_img_list{
   width: 300%;
-  /*根据改变consform:translateX(n)偏移量的值来滑动列表*/
-  //transform: translateX(6%)
 }
 .content_recommend2 .recommend_img_list li{
   float: left;
@@ -251,11 +241,12 @@ ol ,ul{
     color: red;
   }
   em{
-      padding-left: 10/@rem;
-      font-size: 14/@rem;
-      color: #8d8787;
+    padding-left: 10/@rem;
+    font-size: 14/@rem;
+    color: #8d8787;
   }
 }
+
 .footer_wrap{
   width: 100%;
   background: #FFFFFF;
@@ -285,29 +276,32 @@ ol ,ul{
     }
   }
   .footer1{
-       width: 100%;
-       bottom:0;
-       position: fixed;
-       background: #fff;
-       display: flex;
-       text-align: center;
-       border-bottom: 1px silver solid;
-       border-bottom: 0;
-       border-radius: 10/@rem;
-       div{
-         flex: 1;
-         a{
-           color: #55C1DD;
-           font-size: 28/@rem;
-           img{
-             width: 40/@rem;
-             margin-right: 9/@rem;
-           }
-         }
-       }
+    width: 100%;
+    bottom:0;
+    position: fixed;
+    background: #fff;
+    display: flex;
+    text-align: center;
+    border-bottom: 1px silver solid;
+    border-bottom: 0;
+    border-radius: 10/@rem;
+    div{
+      flex: 1;
+      a{
+        color: #55C1DD;
+        font-size: 28/@rem;
+        img{
+          width: 40/@rem;
+          margin-right: 9/@rem;
+        }
+      }
+    }
+  }
+  .while{
+    height: 95/@rem;
   }
 }
-
+/*
 .footer .hr1{
   height: 1px;
   background: rgba(223,223,223,0.5);
@@ -316,7 +310,7 @@ ol ,ul{
 .footer .footer-list{
   display: flex;
   font-family:宋体;
- color:darkgrey;
+  color:darkgrey;
 }
 .footer .footer-list li:nth-of-type(1){
   width: 100/@rem;
@@ -336,13 +330,7 @@ ol ,ul{
 .footer .footer-list li img{
   width: 40/@rem;
 }
-.while{
-  height: 95/@rem;
-}
-
-
-
-
+*/
 
 
 
